--- a/index.html
+++ b/index.html
@@ -45,11 +45,16 @@
                 <li><a href="./pages/random-note.html">Notes</a></li>
             </ul>
         </div>
-
-        <p style="font-size: small;"><i>15 mar 2025, 1811</i></p>
-
-        <p><small>This project is maintained by <a href="https://github.com/y-bears">y-bears</a>. 2025</small></p>
-    </div>
+        <div class="container">
+            <h2>Other apps</h2>
+        </div>
+        <div id="list">
+            <ul>
+                <li><a href="./pages/counter.html">Counter</a></li>
+            </ul>
+            <p style="font-size: small;"><i>16 mar 2025, 1918</i></p>
+            <p><small>This project is maintained by <a href="https://github.com/y-bears">y-bears</a>. 2025</small></p>
+        </div>
 </body>
 
 </html>
