--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <li><a href="./pages/arp.html">Arpeggio Generator</a></li>
                 <li><a href="./pages/rhythm-visual.html">Rhythm Generator (Graphic)</a></li>
                 <li><a href="./pages/drums.html">Drums Generator</a></li>
+                <li><a href="./pages/cajon.html">Cajon</a></li>
                 <li><a href="./pages/chorder.html">Chord Type</a></li>
                 <li><a href="./pages/random-note.html">Notes</a></li>
             </ul>
@@ -52,7 +53,7 @@
             <ul>
                 <li><a href="./pages/counter.html">Counter</a></li>
             </ul>
-            <p style="font-size: small;"><i>21 mar 2025, 12:47</i></p>
+            <p style="font-size: small;"><i>16 apr 2025, 12:47</i></p>
             <p><small>This project is maintained by <a href="https://github.com/y-bears">y-bears</a>. 2025</small></p>
         </div>
 </body>
